# RK2

./: CMakeLists.txt  CPack.cmake  PluggableAdapterDesign.cpp  README.md  Test.cpp
.github/workflows/: actions.yaml
